[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proofgate"
version = "0.1.1"
description = "Official ProofGate SDK — blockchain transaction validation and guardrails for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "0xCR6", email = "cristian@proofgate.xyz" }
]
keywords = [
    "proofgate",
    "ai-agent",
    "blockchain",
    "validation",
    "security",
    "guardrails",
    "defi",
    "web3",
    "ethereum",
    "bsc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://www.proofgate.xyz"
Documentation = "https://www.proofgate.xyz/docs"
Repository = "https://github.com/ProofGate/proofgate-python"
Issues = "https://github.com/ProofGate/proofgate-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["proofgate"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
